public class CropType
{
    public Guid CropTypeId { get; set; }
    public required string CropTypeName { get; set; }
    public string? CropTypeDecription { get; set; }
}