public class EntitlementType
{
    public Guid EntitlementTypeId { get; set; }
    public required string EntitlementName { get; set;}
    public required string EntitlementDescription { get; set;}
}