public class LetterType
{
    public Guid Id { get; set; }
    public required string LetterName { get; set; }
    public required string LetterDescription { get; set; }
    
}